--- a/style.css
+++ b/style.css
@@ -4,10 +4,19 @@
     box-sizing: border-box;
 }
 
+::selection{
+    background-color: var(--prime-color);
+    color: var(--second-color);
+}
+:root{
+    --prime-color: #7900f3;
+    --second-color: #efe0a6;
+}
+
 body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     background-color: black;
-    color: #e7e7e7;
+    color: var(--second-color);
     min-height: 100vh;
     line-height: 1.5;
 }
@@ -40,9 +49,6 @@ body{
 }
 
 .header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 1rem 5rem;
     z-index: 999;
 }
@@ -54,14 +60,11 @@ body{
 }
 
 nav{
-    display: flex;
-    align-items: center;
-    gap: 3rem;
-    margin-left: -5;
+    margin-left: -5%;
 }
 
 nav a{
-    font-size: 1rem;
+    font-size: 1.2rem;
     letter-spacing: 0.1rem;
     transition: color 0.2s ease;
     text-decoration: none;
@@ -69,21 +72,71 @@ nav a{
 }
 
 nav a:hover{
-    color: #a7a7a7;
+    color: var(--prime-color);
 }
 
 .btn-sign{
-    background-color: #a7a7a7;
+    background-color: var(--second-color);
     color: black;
-    padding: 0.8rem 2rem;
+    padding: 0.2rem 1rem;
     border-radius: 50px;
     border: none;
-    font-size: 1rem;
-    font-weight: 500;
+    font-size: 1.2rem;
+    font-weight: bold;
     transition: background-color 0.2s ease;
     cursor: pointer;
 }
 
 .btn-sign:hover{
-    background-color: white;
+    background-color: var(--prime-color);
+    color: var(--second-color);
+}
+
+.main{
+    min-height: calc(90vh - 6rem);
+}
+.content{
+    max-width: 40rem;
+    margin-left: 10%;
+    z-index: 999;
+}
+.tag-box{
+    position: relative;
+    width: 15rem;
+    height: 2.5rem;
+    border-radius: 50px;
+    background: linear-gradient(to right, #656565, #7f427f, #6600c5, #5300a0, #757575, #656565);
+    background-size: 200%;
+    animation: animatioGradient 2.5s linear infinite;
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
+}
+
+@keyframes animatioGradient{
+    to {
+        background-position: 200%;
+    }
+}
+
+.tag-box .tag{
+    position: absolute;
+    inset: 3px 3px 3px 3px;
+    background-color: black;
+    border-radius: 50px;
+    transition: 0.5s ease;
+    cursor: default;
+    padding-left: 20%;
+    padding-top: 1.5%;
+}
+
+.tag-box .tag:hover{
+    color: var(--prime-color);
+}
+
+.content h1{
+    font-size: 4rem;
+    font-weight: 600;
+    letter-spacing: 0.1rem;
+    margin: 2rem 0;
+    line-height: 1.2;
+    text-shadow: 0 0 10px rgba(128, 128, 128, 0.45);
 }
