--- a/style.css
+++ b/style.css
@@ -182,8 +182,10 @@ nav a:hover{
     background-color: rgb(255, 194, 113);
 }
 
-.robot{
+.robot {
     position: relative;
-    top: 0;
-    right: -20%;
+    top: -20%;
+    right: -10%;
+    width: 100%;
+    height: 100%;
 }
